<resources>
    <string name="app_name">MiCita</string>
    <string name="citas_del_usuario">Citas del usuario</string>
    <string name="ver_citas_pendientes">Ver citas pendientes</string>
    <string name="aqu_est_n_tus_citas">Aquí están tus citas</string>
    <string name="nuevas_citas">Nuevas citas</string>
    <string name="pide_una_nueva_cita">Pide una nueva cita</string>
    <string name="pedir_nueva_cita">Pedir nueva cita</string>
    <string name="a_adir">Añadir</string>
    <string name="num">Num:</string>
    <string name="_0">0</string>
    <string name="mira_aqu_tus_citas">Mira aquí tus citas</string>
    <string name="citas">Citas</string>
    <string name="perfil">Perfil</string>
    <string name="gestiona_y_crea_tus_citas">Gestiona y crea tus citas</string>
    <string name="centros">Centros</string>
    <string name="a_ade_y_elimina_tus_centros_favoritos">Añade y elimina tus centros favoritos</string>
    <string name="tu_foto_de_perfil">Tu foto de perfil</string>
    <string name="modifica_la_informaci_n_de_tu_perfil">Modifica la información de tu perfil</string>
    <string name="informacion">Informacion</string>
    <string name="contacto">Contacto</string>
    <string name="para_saber_m_s_sobre_nosotros_y_otras_formas_de_contacto">Para saber más sobre nosotros y otras formas de contacto</string>
    <string name="fotocentro">fotocentro</string>
    <string name="primer_apellido">Primer Apellido</string>
    <string name="segundo_apellido">Segundo Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="actualizar_perfil">Actualizar Perfil</string>
    <string name="informaci_n">Información</string>
    <string name="mail_micita_informacion_es">Mail: micita@informacion.es</string>
    <string name="tel_fono_deservicios_965_98_91_61_y_965_98_91_62">Teléfono deServicios: 965 98 91 61 y 965 98 91 62</string>
    <string name="tel_fono_centralita_965_98_91_00">Teléfono centralita: 965 98 91 00</string>
    <string name="localizaci_n_avenida_doctor_rico_17">Localización: Avenida Doctor Rico, 17</string>
    <string name="c_p_03005">C.P. 03005</string>
    <string name="volver">Volver</string>
    <string name="introduce_tu_dni">Introduce tu DNI</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="dni">DNI</string>
    <string name="introduce_tu_contrase_a">Introduce tu contraseña</string>
    <string name="selecciona_la_fecha">Selecciona la fecha</string>
    <string name="selecciona_la_hora">Selecciona la hora</string>
    <string name="confirmar_cita">Confirmar Cita</string>
    <string name="introduce_tu_segundo_apellido">Introduce tu segundo apellido</string>
    <string name="registro">Registro</string>
    <string name="introduce_tu_nombre">Introduce tu nombre</string>
    <string name="introduce_tu_primer_apellido">Introduce tu primer apellido</string>
    <string name="introduzca_dni">Introduzca DNI</string>
    <string name="introduzca_contrase_a">Introduzca Contraseña</string>
    <string name="confirmar_registro">Confirmar Registro</string>
</resources>