<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"

    tools:context=".CrearNuevaCitaActivity">

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/in_date"
        android:layout_marginTop="82dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:autofillHints="fecha"
        android:inputType="date"
        tools:ignore="LabelFor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_la_fecha"
        android:id="@+id/btn_date"
        android:layout_alignBottom="@+id/in_date"
        android:layout_toEndOf="@+id/in_date" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/in_time"
        android:layout_below="@+id/in_date"
        android:layout_alignParentStart="true"
        android:autofillHints="fecha"
        android:inputType="date"
        tools:ignore="LabelFor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_la_hora"
        android:id="@+id/btn_time"
        android:layout_below="@+id/btn_date"
        android:layout_alignStart="@+id/btn_date" />

    <!--Spinner widget-->

    <Button
        android:id="@+id/buttonConfirmar"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/in_time"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="202dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="206dp"
        android:text="@string/confirmar_cita" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_date"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="18sp"/>



</RelativeLayout>